--- a/pom.xml
+++ b/pom.xml
@@ -10,48 +10,48 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<nuxeo.version>6.0-HF45</nuxeo.version>
-		<nuxeodrive.version>6.0-HF45</nuxeodrive.version>
-		<opentoutatice.version>4.7.16</opentoutatice.version>
-		<ottc.es.version>4.7.16</ottc.es.version>
-		<ottc.collab.version>4.7.14</ottc.collab.version>
-		<ottc.filenaming.version>4.6</ottc.filenaming.version>
-		<ottc.file.versioning.version>4.6</ottc.file.versioning.version>
+		<nuxeo.version>6.1.1</nuxeo.version>
+		<opentoutatice.version>4.7.17.2</opentoutatice.version>
+		<ottc.es.version>4.7.17</ottc.es.version>
+		<ottc.collab.version>4.7.17</ottc.collab.version>
+		<ottc.filenaming.version>4.7.17</ottc.filenaming.version>
+		<ottc.file.versioning.version>4.7.17</ottc.file.versioning.version>
 		<!-- <ottc.wf.version>4.6</ottc.wf.version> -->
-		<ottc.notif.version>4.7.14</ottc.notif.version>
+		<ottc.notif.version>4.7.17</ottc.notif.version>
 		<!-- <ottc.ui.version>4.6.1</ottc.ui.version> -->
 		<!-- <ottc.drive.version>4.6.2</ottc.drive.version> -->
-		<ottc.generic-ui.version>4.6</ottc.generic-ui.version>
+		<ottc.generic-ui.version>4.7.17</ottc.generic-ui.version>
 
-		<ottc.es.custom.version>4.7.14</ottc.es.custom.version>
-		<ottc.procedure.version>4.7.1</ottc.procedure.version>
+		<ottc.es.custom.version>4.7.17.1</ottc.es.custom.version>
+		<ottc.procedure.version>4.7.17</ottc.procedure.version>
 		<!-- <ottc.checkin.version>4.6.1</ottc.checkin.version> --> 
 		<!-- <ottc.pad.version>4.6</ottc.pad.version>-->
-		<ottc.news.version>4.7.14</ottc.news.version> 
+		<ottc.news.version>4.7.17</ottc.news.version> 
 
-		<ottc.jwt.version>4.7</ottc.jwt.version>
-		<ottc.onlyoffice.version>4.7.2</ottc.onlyoffice.version>
+		<ottc.jwt.version>4.7.17</ottc.jwt.version>
+		<ottc.onlyoffice.version>4.7.17</ottc.onlyoffice.version>
 		
-		<ottc.profiledpublishing.version>4.6</ottc.profiledpublishing.version>
-		<ottc.remotepublishing.version>4.6</ottc.remotepublishing.version>
-		<ottc.webmode.version>4.7.14</ottc.webmode.version>
-        <ottc.sharing.version>4.7.14</ottc.sharing.version>
+		<ottc.profiledpublishing.version>4.7.17</ottc.profiledpublishing.version>
+		<ottc.remotepublishing.version>4.7.17</ottc.remotepublishing.version>
+		<ottc.webmode.version>4.7.17</ottc.webmode.version>
+        <ottc.sharing.version>4.7.17</ottc.sharing.version>
 		<ottc.monitoring.version>2.1</ottc.monitoring.version>
-		
+        		
 		<!-- Add-ons métier -->
-		<acrennes.version>4.1.1</acrennes.version>
-		<shortname.version>1.0.3</shortname.version>
-		<toutapad.version>4.6</toutapad.version>
+		<acrennes.version>4.1.3</acrennes.version>
+		<shortname.version>1.0.4</shortname.version>
+
+		<toutapad.version>4.7.17</toutapad.version>
         <climat.version>1.2.0</climat.version>
         <cst.version>2.3.0</cst.version>
         <dco.version>4.2.0</dco.version>
-		<ficheslogiciels.version>6.3.1-RC01</ficheslogiciels.version>
+		<ficheslogiciels.version>6.3.2</ficheslogiciels.version>
 		<listeemargement.version>4.2.0</listeemargement.version>
-		<merens.version>1.5.0</merens.version>
+		<merens.version>1.5.2</merens.version>
 		<mpe.version>4.1.0</mpe.version>
 		<p1d.version>1.6.8</p1d.version>
 		<publidoc.version>4.3.0</publidoc.version>
-		<uar.version>4.3.2</uar.version>
+		<uar.version>4.3.3</uar.version>
 		<ACRENNES3.version>2.5.1</ACRENNES3.version>
 		<ACRENNES4.version>2.5.3-RC01</ACRENNES4.version>
 		<ACRENNES6.version>2.2.1</ACRENNES6.version>
@@ -215,14 +215,7 @@
 			<artifactId>opentoutatice-addon-workflows-integration-ecm</artifactId>
 			<version>${ottc.wf.version}</version>
 		</dependency>
-		 -->
-		 
-		<dependency>
-			<groupId>opentoutatice-ecm.collab-tools</groupId>
-			<artifactId>opentoutatice-collab-tools-ecm</artifactId>
-			<version>${ottc.collab.version}</version>
-		</dependency>
-		<!-- 
+
 		<dependency>
 			<groupId>opentoutatice-ecm.drive</groupId>
 			<artifactId>opentoutatice-drive</artifactId>
@@ -244,6 +237,7 @@
 		    <artifactId>opentoutatice-addon-procedures-ecm</artifactId>
 		    <version>${ottc.procedure.version}</version>
 		</dependency>
+
 		<!-- 
 		<dependency>
 		    <groupId>opentoutatice-ecm.checkin</groupId>
@@ -344,6 +338,7 @@
 			<artifactId>toutatice-acrennes-addons-shortname-ecm</artifactId>
             <version>${shortname.version}</version>        
 		</dependency>
+
 		<dependency>
   			<groupId>toutatice-acrennes-addons.toutapad</groupId>
   			<artifactId>toutatice-acrennes-addons-toutapad-ecm</artifactId>
@@ -399,6 +394,7 @@
             <artifactId>toutatice-uar-ecm</artifactId>
             <version>${uar.version}</version>
         </dependency>
+        
         <dependency>
             <groupId>acaren-nuxeo-studio</groupId>
             <artifactId>ACRENNES3</artifactId>
@@ -414,6 +410,7 @@
             <artifactId>ACRENNES6</artifactId>
             <version>${ACRENNES6.version}</version>
         </dependency>
+
 
 		<!-- Agenda -->
 		<dependency>
@@ -453,11 +450,13 @@
 			<artifactId>nuxeo-annot-repo</artifactId>
 			<version>${nuxeo.version}</version>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>org.nuxeo.dam</groupId>
 			<artifactId>nuxeo-dam</artifactId>
 			<version>${nuxeo.version}</version>
 		</dependency>
+		 -->
 				
 
 		<!-- Imaging -->
@@ -579,34 +578,6 @@
 			<groupId>org.nuxeo.ecm.platform</groupId>
 			<artifactId>nuxeo-platform-login-portal-sso</artifactId>
 			<version>${nuxeo.version}</version>
-		</dependency>
-		
-
-		<!-- Nuxeo Drive -->
-		<dependency>
-  			<groupId>org.nuxeo.ecm</groupId>
-			<artifactId>nuxeo-drive-core</artifactId>
-			<version>${nuxeodrive.version}</version>
-		</dependency>
-		<dependency>
-  			<groupId>org.nuxeo.ecm</groupId>
-			<artifactId>nuxeo-drive-jsf</artifactId>
-			<version>${nuxeodrive.version}</version>
-		</dependency>
-		<dependency>
-  			<groupId>org.nuxeo.ecm</groupId>
-			<artifactId>nuxeo-drive-operations</artifactId>
-			<version>${nuxeodrive.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nuxeo.lib.core</groupId>
-			<artifactId>nuxeo-core-storage-sql-extensions</artifactId>
-			<version>${nuxeodrive.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nuxeo.lib.wss</groupId>
-			<artifactId>nuxeo-wss-front</artifactId>
-			<version>${nuxeodrive.version}</version>
 		</dependency>
 
 		<!-- Platform explorer -->
