--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
 	<properties>
 		<nuxeo.version>6.1.1</nuxeo.version>
 	
-		<opentoutatice.version>4.4.18</opentoutatice.version>
+		<opentoutatice.version>4.4-SNAPSHOT</opentoutatice.version>
 		<ottc.es.version>4.4.18</ottc.es.version>
-		<ottc.collab.version>4.4.18</ottc.collab.version>
+		<ottc.collab.version>4.4-SNAPSHOT</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
 		<ottc.file.versioning.version>4.4.18</ottc.file.versioning.version>
-		<ottc.wf.version>4.4.18</ottc.wf.version>
+		<ottc.wf.version>4.4-SNAPSHOT</ottc.wf.version>
 		<ottc.notif.version>4.4.18</ottc.notif.version>
 		<ottc.ui.version>2.1</ottc.ui.version>
 		<!-- <ottc.drive.version>4.4</ottc.drive.version>  -->
