--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
 
 	<properties>
 		<nuxeo.version>6.1.1</nuxeo.version>
-	
+		<nuxeodrive.version>6.1.1</nuxeodrive.version>
+		
 		<opentoutatice.version>4.4.19.3</opentoutatice.version>
 		<ottc.es.version>4.4.19-alias</ottc.es.version>
 		<ottc.collab.version>4.4.18.5</ottc.collab.version>
@@ -20,7 +21,7 @@
 		<ottc.wf.version>4.4.18.5</ottc.wf.version>
 		<ottc.notif.version>4.4.18.5</ottc.notif.version>
 		<ottc.ui.version>2.1</ottc.ui.version>
-		<!-- <ottc.drive.version>4.4</ottc.drive.version>  -->
+		<ottc.drive.version>4.4.19.4</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
 
 		<ottc.es.custom.version>4.4.18</ottc.es.custom.version>
@@ -188,13 +189,11 @@
 			<artifactId>opentoutatice-collab-tools-ecm</artifactId>
 			<version>${ottc.collab.version}</version>
 		</dependency>
-		<!-- 
 		<dependency>
 			<groupId>opentoutatice-ecm.drive</groupId>
 			<artifactId>opentoutatice-drive</artifactId>
 			<version>${ottc.drive.version}</version>
 		</dependency>
-		 -->
 		<dependency>
 			<groupId>opentoutatice-ecm.generic-ui-service</groupId>
 			<artifactId>opentoutatice-generic-ui-service-ecm</artifactId>
@@ -380,7 +379,8 @@
             <version>${nuxeo.reindex.fulltext.version}</version>
         </dependency>
 -->
-		<!-- Nuxeo Drive
+		<!-- Nuxeo Drive-->
+		
 		<dependency>
   			<groupId>org.nuxeo.ecm</groupId>
 			<artifactId>nuxeo-drive-core</artifactId>
@@ -406,8 +406,7 @@
 			<artifactId>nuxeo-wss-front</artifactId>
 			<version>${nuxeodrive.version}</version>
 		</dependency>
-		-->
-
+		
 		<!-- Platform explorer -->
 		<dependency>
 			<groupId>org.nuxeo.ecm.platform</groupId>
