--- a/pom.xml
+++ b/pom.xml
@@ -3,61 +3,30 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>toutatice-ecm.acrennes</groupId>
-	<artifactId>acrennes-nx-distrib</artifactId>
-	<version>4.7-SNAPSHOT</version>
-	<name>Ac-rennes nuxeo distribution</name>
+	<groupId>fr.acrennes.greta</groupId>
+	<artifactId>greta-nx-distrib</artifactId>
+	<version>4.2-SNAPSHOT</version>
+	<name>Greta nuxeo distribution</name>
 	<packaging>pom</packaging>
 
 	<properties>
-		<nuxeo.version>6.1.1</nuxeo.version>
-		<opentoutatice.version>4.7.26</opentoutatice.version>
-		<ottc.es.version>4.7.20</ottc.es.version>
-		<ottc.collab.version>4.7.17</ottc.collab.version>
-		<ottc.filenaming.version>4.7.17</ottc.filenaming.version>
-		<ottc.file.versioning.version>4.7.17</ottc.file.versioning.version>
-		<!-- <ottc.wf.version>4.6</ottc.wf.version> -->
-		<ottc.notif.version>4.7.17</ottc.notif.version>
-		<!-- <ottc.ui.version>4.6.1</ottc.ui.version> -->
-		<!-- <ottc.drive.version>4.6.2</ottc.drive.version> -->
-		<ottc.generic-ui.version>4.7.17</ottc.generic-ui.version>
+		<nuxeo.version>6.1.2</nuxeo.version>
+		<opentoutatice.version>4.2.25</opentoutatice.version>
+		<ottc.es.version>1.2</ottc.es.version>
+		
+		<ottc.notif.version>1.2.0-RC01</ottc.notif.version>
+		
+		<ottc.generic-ui.version>3.1.1-RC03</ottc.generic-ui.version>
 
-		<ottc.es.custom.version>4.7.17.1</ottc.es.custom.version>
-		<ottc.procedure.version>4.7.17</ottc.procedure.version>
-		<!-- <ottc.checkin.version>4.6.1</ottc.checkin.version> -->
-		<!-- <ottc.pad.version>4.6</ottc.pad.version> -->
-		<ottc.news.version>4.7.17</ottc.news.version>
-
-		<ottc.jwt.version>4.7.17</ottc.jwt.version>
-		<ottc.onlyoffice.version>4.7.17</ottc.onlyoffice.version>
-
-		<ottc.profiledpublishing.version>4.7.17</ottc.profiledpublishing.version>
-		<ottc.remotepublishing.version>4.7.18</ottc.remotepublishing.version>
-		<ottc.webmode.version>4.7.17.1</ottc.webmode.version>
-        <ottc.sharing.version>4.7.17</ottc.sharing.version>
-		<ottc.monitoring.version>2.1</ottc.monitoring.version>
-
-		<!-- Add-ons métier -->
-		<acrennes.version>4.1.3</acrennes.version>
-		<shortname.version>1.0.4</shortname.version>
-
-		<toutapad.version>4.7.17</toutapad.version>
-		<climat.version>1.3.1</climat.version>
-		<cst.version>2.3.0</cst.version>
-		<dco.version>4.2.1</dco.version>
-		<ficheslogiciels.version>6.3.2</ficheslogiciels.version>
-		<listeemargement.version>4.2.0</listeemargement.version>
-		<merens.version>1.5.2</merens.version>
-		<mpe.version>4.1.0</mpe.version>
-		<p1d.version>1.6.8</p1d.version>
-		<publidoc.version>4.3.0</publidoc.version>
-		<uar.version>4.3.4</uar.version>
-		<ACRENNES3.version>2.5.1</ACRENNES3.version>
-		<ACRENNES4.version>2.5.3-RC01</ACRENNES4.version>
-		<ACRENNES6.version>2.2.1</ACRENNES6.version>
+		<ottc.webmode.version>4.2.25</ottc.webmode.version>
+		
+		<studio.acrennes.version>4.2.2</studio.acrennes.version>
+		<toutatice.dafpic.version>4.2.25</toutatice.dafpic.version>
 
 		<!-- Logs -->
 		<log4j.version>2.8</log4j.version>
+		
+		<ottc.monitoring.version>2.1</ottc.monitoring.version>			
 	</properties>
 
 	<build>
@@ -143,22 +112,12 @@
 		<!-- OpenToutatice -->
 		<dependency>
 			<groupId>opentoutatice-ecm.platform</groupId>
-			<artifactId>opentoutatice-ecm-platform-attached-files</artifactId>
-			<version>${opentoutatice.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>opentoutatice-ecm.platform</groupId>
 			<artifactId>opentoutatice-ecm-platform-automation</artifactId>
 			<version>${opentoutatice.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>opentoutatice-ecm.platform</groupId>
 			<artifactId>opentoutatice-ecm-platform-core</artifactId>
-			<version>${opentoutatice.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>opentoutatice-ecm.platform</groupId>
-			<artifactId>opentoutatice-core-type-enricher</artifactId>
 			<version>${opentoutatice.version}</version>
 		</dependency>
 		<dependency>
@@ -173,31 +132,15 @@
 		</dependency>
 		<dependency>
 			<groupId>opentoutatice-ecm.platform</groupId>
-			<artifactId>opentoutatice-ecm-platform-reporting</artifactId>
+			<artifactId>opentoutatice-ecm-platform-probes</artifactId>
 			<version>${opentoutatice.version}</version>
-		</dependency>
+		</dependency>		
 
 		<!-- Addons -->
 		<dependency>
 			<groupId>opentoutatice-ecm.elasticsearch</groupId>
 			<artifactId>opentoutatice-addon-elasticsearch-ecm</artifactId>
 			<version>${ottc.es.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>opentoutatice-ecm.collab-tools</groupId>
-			<artifactId>opentoutatice-collab-tools-ecm</artifactId>
-			<version>${ottc.collab.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>opentoutatice-ecm.file-based-naming</groupId>
-			<artifactId>opentoutatice-addon-file-based-naming-ecm</artifactId>
-			<version>${ottc.filenaming.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>opentoutatice-ecm.file-versioning</groupId>
-			<artifactId>opentoutatice-addon-file-versioning-ecm</artifactId>
-			<version>${ottc.file.versioning.version}</version>
 		</dependency>
 
 		<dependency>
@@ -206,46 +149,10 @@
 			<version>${ottc.notif.version}</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>opentoutatice-ecm.ui</groupId> <artifactId>opentoutatice-addon-simple-ui-ecm</artifactId> 
-			<version>${ottc.ui.version}</version> </dependency> <dependency> <groupId>opentoutatice-ecm.workflows-integration</groupId> 
-			<artifactId>opentoutatice-addon-workflows-integration-ecm</artifactId> <version>${ottc.wf.version}</version> 
-			</dependency> <dependency> <groupId>opentoutatice-ecm.drive</groupId> <artifactId>opentoutatice-drive</artifactId> 
-			<version>${ottc.drive.version}</version> </dependency> -->
 		<dependency>
 			<groupId>opentoutatice-ecm.generic-ui-service</groupId>
 			<artifactId>opentoutatice-generic-ui-service-ecm</artifactId>
 			<version>${ottc.generic-ui.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>opentoutatice-ecm.elasticsearch-customizer</groupId>
-			<artifactId>opentoutatice-addon-elasticsearch-customizer-ecm</artifactId>
-			<version>${ottc.es.custom.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>opentoutatice-ecm.procedures</groupId>
-			<artifactId>opentoutatice-addon-procedures-ecm</artifactId>
-			<version>${ottc.procedure.version}</version>
-		</dependency>
-
-		<!-- <dependency> <groupId>opentoutatice-ecm.checkin</groupId> <artifactId>opentoutatice-addon-checkin-ecm</artifactId> 
-			<version>${ottc.checkin.version}</version> </dependency> <dependency> <groupId>opentoutatice-ecm.toutapad</groupId> 
-			<artifactId>opentoutatice-addon-toutapad-ecm</artifactId> <version>${ottc.pad.version}</version> 
-			</dependency> -->
-		<dependency>
-			<groupId>opentoutatice-ecm.news</groupId>
-			<artifactId>opentoutatice-addon-news-ecm</artifactId>
-			<version>${ottc.news.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>opentoutatice-ecm.jwt</groupId>
-			<artifactId>opentoutatice-addon-jwt-ecm</artifactId>
-			<version>${ottc.jwt.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>opentoutatice-ecm.onlyoffice</groupId>
-			<artifactId>opentoutatice-addon-onlyoffice-ecm</artifactId>
-			<version>${ottc.onlyoffice.version}</version>
 		</dependency>
 
 		<dependency>
@@ -255,143 +162,27 @@
 		</dependency>
 
 		<dependency>
-			<groupId>opentoutatice-ecm.profiled-publishing</groupId>
-			<artifactId>opentoutatice-platform-profiled-publishing-ecm</artifactId>
-			<version>${ottc.profiledpublishing.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>opentoutatice-ecm.remote-publishing</groupId>
-			<artifactId>opentoutatice-platform-remote-publishing-ecm</artifactId>
-			<version>${ottc.remotepublishing.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>opentoutatice-ecm.web-mode</groupId>
 			<artifactId>opentoutatice-web-mode-ecm</artifactId>
 			<version>${ottc.webmode.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>opentoutatice-ecm.sharing</groupId>
-			<artifactId>opentoutatice-sharing</artifactId>
-			<version>${ottc.sharing.version}</version>
-		</dependency>
-
-		<!-- Acrennes -->
-		<dependency>
-			<groupId>toutatice-ecm.acrennes</groupId>
-			<artifactId>toutatice-ecm-acrennes-adaptor</artifactId>
-			<version>${acrennes.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-ecm.acrennes</groupId>
-			<artifactId>toutatice-ecm-acrennes-automation</artifactId>
-			<version>${acrennes.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-ecm.acrennes</groupId>
-			<artifactId>toutatice-ecm-acrennes-core</artifactId>
-			<version>${acrennes.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-ecm.acrennes</groupId>
-			<artifactId>toutatice-ecm-acrennes-web</artifactId>
-			<version>${acrennes.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-ecm.acrennes</groupId>
-			<artifactId>toutatice-ecm-acrennes-studio</artifactId>
-			<version>${acrennes.version}</version>
-		</dependency>
-		<!-- <dependency> <groupId>acaren-nuxeo-studio-extension</groupId> <artifactId>ACRENNES4</artifactId> 
-			<version>${acrennes4.version}</version> </dependency> <dependency> <groupId>acaren-nuxeo-studio-extension</groupId> 
-			<artifactId>ACRENNES6</artifactId> <version>${acrennes6.version}</version> 
-			</dependency> -->
-
-		<!-- Acrennes addons -->
-		<dependency>
-			<groupId>toutatice-acrennes-addons.shortname</groupId>
-			<artifactId>toutatice-acrennes-addons-shortname-ecm</artifactId>
-			<version>${shortname.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>toutatice-acrennes-addons.toutapad</groupId>
-			<artifactId>toutatice-acrennes-addons-toutapad-ecm</artifactId>
-			<version>${toutapad.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-services.climat</groupId>
-			<artifactId>toutatice-climat-ecm</artifactId>
-			<version>${climat.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-services.cst</groupId>
-			<artifactId>toutatice-cst-ecm</artifactId>
-			<version>${cst.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-services.depotConfidentiel</groupId>
-			<artifactId>toutatice-dco-ecm</artifactId>
-			<version>${dco.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-services.ficheslogiciels</groupId>
-			<artifactId>toutatice-ficheslogiciels-ecm</artifactId>
-			<version>${ficheslogiciels.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-services.listeemargement</groupId>
-			<artifactId>toutatice-listeemargement-ecm</artifactId>
-			<version>${listeemargement.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-services.merens</groupId>
-			<artifactId>toutatice-merens-ecm</artifactId>
-			<version>${merens.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-services.mpe</groupId>
-			<artifactId>toutatice-mpe-ecm</artifactId>
-			<version>${mpe.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-services.p1d</groupId>
-			<artifactId>toutatice-p1d-ecm</artifactId>
-			<version>${p1d.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-services.publidoc</groupId>
-			<artifactId>toutatice-publidoc-ecm</artifactId>
-			<version>${publidoc.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>toutatice-services.uar</groupId>
-			<artifactId>toutatice-uar-ecm</artifactId>
-			<version>${uar.version}</version>
-		</dependency>
 
 		<dependency>
 			<groupId>acaren-nuxeo-studio</groupId>
-			<artifactId>ACRENNES3</artifactId>
-			<version>${ACRENNES3.version}</version>
+			<artifactId>ACRENNES</artifactId>
+			<version>${studio.acrennes.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>toutatice-services.dafpic</groupId>
+			<artifactId>toutatice-dafpic-ecm</artifactId>
+			<version>${toutatice.dafpic.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>toutatice-services.acrennes-nuxeo-marketplaces</groupId>
-			<artifactId>acrennes4</artifactId>
-			<version>${ACRENNES4.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>acaren-nuxeo-studio</groupId>
-			<artifactId>ACRENNES6</artifactId>
-			<version>${ACRENNES6.version}</version>
-		</dependency>
-
-
-		<!-- Agenda -->
-		<dependency>
-			<groupId>org.nuxeo.ecm.platform</groupId>
-			<artifactId>nuxeo-agenda</artifactId>
-			<version>${nuxeo.version}</version>
-		</dependency>
+			<groupId>toutatice-services.dafpic</groupId>
+			<artifactId>toutatice-dafpic-es</artifactId>
+			<version>${toutatice.dafpic.version}</version>
+		</dependency>		
 
 		<!-- DAM -->
 		<dependency>
@@ -424,9 +215,6 @@
 			<artifactId>nuxeo-annot-repo</artifactId>
 			<version>${nuxeo.version}</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.nuxeo.dam</groupId> <artifactId>nuxeo-dam</artifactId> 
-			<version>${nuxeo.version}</version> </dependency> -->
-
 
 		<!-- Imaging -->
 		<dependency>
